 - gui: added addon_registry to load and manage addons
 - gui: added keybinder to manage Lua key bindings
 - gui: added gion::is_loaded() and clarify the semantic
 - gui: added input::get_localizable_key_name and input::get_localizable_mouse_button_name
 - gui: added input::window as an interface to implementation-dependent concepts (clipboard...)
 - gui: added frame::enable_key_capture
 - gui: renamed gui::uiobject into gui::region, and merged with previous gui::region
 - gui: renamed gui::manager_impl into gui::renderer
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::fire_script
 - gui: renamed frame::fire_build_layer_list into frame::notify_layers_need_update
 - gui: renamed frame_renderer::fire_redraw into notify_strata_needs_redraw
 - gui: renamed region::fire_udpate_borders to region::notify_borders_need_update
 - gui: renamed color::chanel to color::channel
 - gui: renamed quad2 to bounds2
 - gui: renamed font_string::set_offsets to set_offset
 - gui: renamed font_string::get_offsets to get_offset
 - gui: renamed font_string::set_shadow_offsets to set_shadow_offset
 - gui: renamed font_string::get_shadow_offsets to get_shadow_offset
 - gui: renamed region::set_abs_width/height/dimensions to set_width/height/dimensions
 - gui: renamed region::set_rel_width/height/dimensions to set_relative_width/height/dimensions
 - gui: renamed frame::get/set_min/max_resize to get/set_min/max_dimensions
 - gui: renamed manager::update to update_ui
 - gui: renamed manager::read_files to load_ui
 - gui: renamed manager::create_lua to register_lua_glues
 - gui: renamed event_manager to event_emitter
 - gui: renamed input::manager::get_key_name into input::get_key_codename
 - gui: renamed input::manager::get_mouse_button_string into input::get_mouse_button_codename
 - gui: renamed input::manager::get_key_name overloads with modifiers